logs/metlog-cef.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cef-0.5.egg-info'...
Listing './lib/python3.5/site-packages/docopt-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/metlog'...
Compiling './lib/python3.5/site-packages/metlog/client.py'...
***   File "./lib/python3.5/site-packages/metlog/client.py", line 191
    except StandardError, e:
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/metlog/decorators'...
Listing './lib/python3.5/site-packages/metlog/senders'...
Listing './lib/python3.5/site-packages/metlog/tests'...
Compiling './lib/python3.5/site-packages/metlog/tests/sync_publisher.py'...
***   File "./lib/python3.5/site-packages/metlog/tests/sync_publisher.py", line 66
    except ZeroMQError, err:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/metlog/tests/sync_subscriber.py'...
***   File "./lib/python3.5/site-packages/metlog/tests/sync_subscriber.py", line 42
    print 'Received %d updates' % nbr
                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/metlog_cef'...
Listing './lib/python3.5/site-packages/metlog_cef/tests'...
Compiling './lib/python3.5/site-packages/metlog_cef/tests/ceftests.py'...
***   File "./lib/python3.5/site-packages/metlog_cef/tests/ceftests.py", line 55
    except SyntaxError, se:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/metlog_cef-0.2.egg-info'...
Listing './lib/python3.5/site-packages/metlog_py-0.10.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
